# parareq

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  functional_test.py  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  quickstart.md
examples/input/: huggingface_example.jsonl
src/parareq/: __init__.py  cli.py  openai_utils.py  parareq.py  parareq_cli.py  parareq_utils.py  rate_limiter.py  utils.py
tests/: functional_test.py  functional_testing_utils.py  test_cli.py  test_openai_utils.py  test_parareq.py  test_rate_limiter.py  test_utils.py  wip_parareq.py
tests/data/: config_example.jsonl
