[tool.poetry]
name = "parareq"
version = "0.1.0"
description = "Reliable Parallel OpenAI API Request Processing with Rate Limiting"
authors = ["Matt Gibson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
tiktoken = "^0.5.1"
openai = "^1.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
